--- a/.github/workflows/dockerbuild.yml
+++ b/.github/workflows/dockerbuild.yml
@@ -4,14 +4,14 @@ on:
     tags:
       - v*
 jobs:
-  golangci:
+  build:
     name: build
     runs-on: ubuntu-latest
     steps:
-    uses: docker/build-push-action@v1
-    with:
-      username: ${{ secrets.DOCKER_USERNAME }}
-      password: ${{ secrets.DOCKER_PASSWORD }}
-      repository: jlubzinski/pd-checker
-      tag_with_ref: true
-      tag_with_sha: true
+      - uses: docker/build-push-action@v1
+        with:
+          username: ${{ secrets.DOCKER_USERNAME }}
+          password: ${{ secrets.DOCKER_PASSWORD }}
+          repository: jlubzinski/pd-checker
+          tag_with_ref: true
+          tag_with_sha: true
