--- a/.github/workflows/dockerbuild.yml
+++ b/.github/workflows/dockerbuild.yml
@@ -15,3 +15,4 @@ jobs:
           repository: jlubzinski/pd-checker
           tag_with_ref: true
           tag_with_sha: true
+          path: build
