--- a/deployments/docker-compose-service.yml
+++ b/deployments/docker-compose-service.yml
@@ -1,7 +1,7 @@
 version: '2.0'
 services:
   pd-checker-service:
-    image: pd-checker2
+    image: jlubzinski/pd-checker:v0.0.1 
     command: service server
     environment:
       PAGERDUTY_AUTH_TOKEN:
